--- a/index.css
+++ b/index.css
@@ -12,51 +12,92 @@ body {
 }
 
 main h1 {
-    font-size: 60px;
+    font-size: 70px;
     background-color: #851944;
     color: #FFF;
     text-align: center;
-    margin-bottom: 20PX;
+    margin-bottom: 30PX;
     font-family:'Open Sans', sans-serif;
+    border-bottom: 15px solid black;
+    height: 106px;
+}
+
+h1 {
+    font-size: 32px;
+    height: 47px;
 }
 
 h2 {
     font-size: 40px;
     font-family: 'Open Sans', sans-serif;
+    line-height: 91px;
 }
 
 main p a {
    color:#851944;
    font-family: 'Open Sans', sans-serif;
+   padding: 20px;
+  
+   
+}
+div {
+    width: 720px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 p{
     text-align: justify;
+    line-height: 30px;
+    margin: 20px 0;
 }
 
 blockquote {
     background-color:#D9E5E3 ;
+    padding:20px;
+    border: 10px solid #C2CCCA;
+    border-bottom-color: #C2CCCA;
+    border-right-color: #C2CCCA;
+    width:198px;
+    box-sizing: border-box;
+    
 }
 
 aside {
     background-color: #3C1D3D;
     color:#F2FFFC ;
+    list-style-type: none;
+    text-align: center;
+    border: 10px solid black;
 }
 
 li a {
     text-decoration: none;
     font-family: 'Open Sans',sans-serif;
+    line-height: 30px;
 }
 
 nav a {
     color: #F2FFFC;
+    ;
+   
 }
 
 #copy {
     background-color: black;
     color:#F2FFFC ;
+    margin-top: 15px;
+    padding: 5px;
 }
 
 article footer a {
     background-color: #FFF;
+}
+
+#eu {
+    border: 15px solid black;
+}
+
+#inline li {
+    display: inline-block;
 }
